syntax = "proto3";

message IndexingJob {
  string filePath = 1;
  string fileName = 2;
}
